[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ramentruck"
version = "0.4.0"
description = "A deep, layered ML/AI toolkit — the machine learning companion to ThaiTruck."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]

dev = [
    "pytest>=8.0",
    "pytest-cov",
]

deep = [
    "tensorflow>=2.12",
    "matplotlib>=3.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ramentruck"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
